# finext-web-app

./: .cursorignore  .env  .geminiignore  .gitignore  CLAUDE.md  docker-compose.yml  finext-huong-dan-dong-dang-ky.md  finext-session-state.md  package-lock.json  package.json  readme.md  tmp_check.json
finext-fastapi/: .dockerignore  .gitignore  check_permissions.py  dockerfile  main.py  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  run_dev.bat
finext-fastapi/app/: __init__.py  main.py
finext-fastapi/app/agent/: context.py  events.py  labels.py  loop.py  portfolio.py  sanitize.py  suggestions.py
finext-fastapi/app/auth/: access.py  dependencies.py  jwt_handler.py
finext-fastapi/app/core/: config.py  database.py  scheduler.py  seeding.py
finext-fastapi/app/crud/: brokers.py  chat.py  chat_suggestions.py  dashboard.py  features.py  licenses.py  otps.py  permissions.py  promotions.py  roles.py  sessions.py  sse.py  subscriptions.py  transactions.py  users.py  watchlists.py
finext-fastapi/app/routers/: __init__.py  auth.py  brokers.py  chat.py  dashboard.py  emails.py  features.py  items.py  licenses.py  otps.py  permissions.py  promotions.py  roles.py  sessions.py  sse.py  subscriptions.py  transactions.py  uploads.py  users.py  watchlists.py
finext-fastapi/app/schemas/: __init__.py  active_sessions .py  auth.py  brokers.py  chat.py  common.py  dashboard.py  emails.py  features.py  licenses.py  otps.py  permissions.py  promotions.py  roles.py  sessions.py  subscriptions.py  token.py  (+4 more)
finext-fastapi/scripts/: ask_agent.py  try_suggestions.py
(+939 files in other folders)
